# qplug

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: au.plist.in  build_au.cmake  build_vst3.cmake  config.h.in  defaults.cmake  derived.cmake  external.cmake  factory.cpp.in  qplug.cmake  vst3.plist.in
docs/: _config.yml  index.md  setup.md
docs/_layouts/: default.html
examples/: CMakeLists.txt
examples/gain/: CMakeLists.txt  gain.cpp  gain.hpp  gain_controller.cpp  gain_controller.hpp  gain_processor.cpp  gain_processor.hpp  test_load_dll.cpp
lib/include/qplug/: controller.hpp  data_stream.hpp  parameter.hpp  presets.hpp  processor.hpp
lib/src/: controller.cpp  processor.cpp
lib/src/iplug2/: iplug2_plugin.cpp  iplug2_plugin.hpp
test/: CMakeLists.txt  presets_test.cpp
